[project]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "zhweiliu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain (>=1.1.3,<2.0.0)",
    "langchain-anthropic (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
